fix the multi slide feature on mobile

--- a/slider_carousel.css
+++ b/slider_carousel.css
@@ -16,7 +16,7 @@
 .video-slider li{
     display: inline-block;
     float: left;
-    width: 275px;
+    width: 150px;
 }
 .video-slider li img{
     width: 100%;
